[tool.poetry]
name = "quart_do_osissue_error"
version = "0.1.0"
description = ""
authors = ["Jay Tuckey <jay@tuckey.email>"]

[tool.poetry.dependencies]
python = "^3.9"
Quart = "^0.15.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
